--- a/Tribute Page/tribute_page.html
+++ b/Tribute Page/tribute_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="tribute_page.css" />
   </head>
   <body>
     <main id="main">
